# fplume_montecarlo

./: .gitignore  .gitignore.save  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
data/interim/templates/: template_fplume.inp  template_fplume.tgsd
data/raw/: list_eruptions.txt
src/fplume_montecarlo/: __init__.py  config.py  create_met_file.py  download_era5.py  generate_inp_file.py  plot_montecarlo.py  prepare_input_files.py  qqplot_montecarlo.py  run_montecarlo.py  utilities.py  volcanoes.py
